src/main/kotlin/com/example/ddd/common/errors/ErrorDto.kt
package com.example.ddd.common.errors

data class ErrorDto(val message: String)
